<resources>
    <string name="app_name">SpoonVoice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Добро\nпожаловать</string>
    <string name="account">Аккаунт</string>
    <string name="voice">Voice</string>
    <string name="home">Главная</string>
    <string name="statistics">Статистика</string>

    <string name="search">Поиск</string>
    <string name="food_size">Размер порции</string>

    <string name="calories">Калории</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carb">Углеводы</string>

    <string name="balance">Соблюдение баланса</string>
    <string name="balanceHintButtonText">День считается в балансе, если разница с диетой по каждому макронутриенту БЖУ составляет не более 10%</string>

    <string name="greatBalanceResultText">Отличный результат. Так держать!</string>
    <string name="wellBalanceResultText">Ваша выдержка достойна похвалы. \nПродолжайте в том же духе!</string>
    <string name="startBalanceResultText">Неплохо, но есть куда стремиться. \nВерьте в себя!</string>

    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="change_diet_text">Изменить диету</string>
    <string name="exit">Выйти</string>

    <string name="recent">Недавние блюда</string>

    <string name="chart">График&#xA0;</string>

    <string name="initial_phrase">"Привет! Чем могу помочь?</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>