<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listfood"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/foodlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/tv_food_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:text="Granola"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/foodlist1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/food_image"
                android:layout_width="260dp"
                android:layout_height="260dp"
                app:srcCompat="@drawable/food_example_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/nutrientslist_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/nutrientslist_carbs"
                app:layout_constraintTop_toBottomOf="@+id/foodlist">

                <ImageView
                    android:layout_width="@dimen/nutrients_img"
                    android:layout_height="@dimen/nutrients_img"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_proteins"
                    android:backgroundTint="@color/protein"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/food_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="32 г"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nutrientslist_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/nutrientslist_carbs"
                app:layout_constraintTop_toBottomOf="@+id/foodlist">

                <ImageView
                    android:layout_width="@dimen/nutrients_img"
                    android:layout_height="@dimen/nutrients_img"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_fat"
                    android:backgroundTint="@color/fat"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/food_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="98 г"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nutrientslist_carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodlist">

                <ImageView
                    android:layout_width="@dimen/nutrients_img"
                    android:layout_height="@dimen/nutrients_img"
                    android:layout_gravity="center"
                    android:background="@drawable/carb_icon"
                    android:backgroundTint="@color/carb"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/food_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="235 г"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/food_size_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:text="@string/food_size"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_gram"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="Грамм"
            android:inputType="number"
            android:minHeight="42dp" />

        <Button
            android:id="@+id/button_add_food"
            android:layout_width="240dp"
            android:layout_height="54dp"
            android:background="@drawable/add_btn_background"
            android:fontFamily="@font/main_font"
            android:includeFontPadding="false"
            android:paddingTop="3dp"
            android:text="@string/add"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
