<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ui.DietFragment">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/diet_standart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diet_tv_bakground"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="Норма"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/diet_standard_Chart"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/diet_keto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diet_tv_bakground"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="Кето"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/diet_keto_Chart"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/diet_protein"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diet_tv_bakground"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="Белковая"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/diet_protein_Chart"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diet_custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diet_tv_bakground"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="Кастомная"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/diet_my_Chart"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

            </LinearLayout>

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/send_diet_to_firebase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/add_btn_background"
        android:fontFamily="@font/main_font"
        android:text="Сохранить диету"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:values="@array/initial_slider_values" />

    <LinearLayout
        android:id="@+id/values_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider">


        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/protein" />

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fat" />

        <TextView
            android:id="@+id/tvCarb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/carb" />
    </LinearLayout>


</FrameLayout>